--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -72,7 +72,6 @@
         }
 
         .back { transform: rotateY(180deg); }
-
         .full-img { width: 100%; height: 100%; object-fit: cover; display: block; }
 
         .text-content {
@@ -84,18 +83,18 @@
             box-sizing: border-box;
         }
 
-        h4 { font-family: 'Playfair Display', serif; font-size: 1.8rem; margin: 0 0 15px 0; color: var(--ink); }
-        .page-text { font-size: 1.15rem; line-height: 1.7; color: #444; margin-bottom: 20px; }
-        .quote { font-style: italic; border-left: 2px solid #d1ccc0; padding-left: 15px; margin: 20px 0; color: #666; }
+        h4 { font-family: 'Playfair Display', serif; font-size: 1.6rem; margin: 0 0 15px 0; color: var(--ink); }
+        .page-text { font-size: 1.1rem; line-height: 1.6; color: #444; margin-bottom: 15px; }
+        .quote { font-style: italic; border-left: 2px solid #d1ccc0; padding-left: 15px; margin: 15px 0; color: #666; font-size: 1rem; }
 
         .credits-box {
             margin-top: auto;
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             text-transform: uppercase;
             letter-spacing: 1px;
             color: #999;
             border-top: 1px solid #eee;
-            padding-top: 20px;
+            padding-top: 15px;
         }
 
         .flipped { transform: rotateY(-180deg); }
@@ -116,7 +115,7 @@
                     <img src="../es/proyectos/leo1.png" class="full-img">
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-amigo.png" class="full-img">
+                    <img src="../es/proyectos/leo2.png" class="full-img">
                 </div>
             </div>
 
@@ -128,7 +127,7 @@
                             Este proyecto editorial nace de la necesidad de dar vida a los paisajes internos de "Leo". La narrativa requería una estética que combinara la inocencia con la profundidad del relato.
                         </div>
                         <div class="quote">
-                            "Leo escuchaba el mundo de manera diferente. Donde otros oían ruido, él percibía el susurro de las hojas."
+                            "Para Lucca: te deseo que tu peculiar manera de escuchar e interpretar el mundo te lleve a construir sueños tan grandes como la familia que cuida."
                         </div>
                         <div class="credits-box">
                             Escrito por Carol Vila Micó<br>
@@ -137,52 +136,53 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-armonia.png" class="full-img">
+                    <img src="../es/proyectos/leo3.png" class="full-img">
                 </div>
             </div>
 
             <div class="paper" id="p3" style="z-index: 6;" onclick="flip(3)">
                 <div class="front">
                     <div class="text-content">
-                        <h4>Dirección de Arte e IA</h4>
+                        <h4>Dirección de Arte</h4>
                         <div class="page-text">
-                            Utilizando herramientas de generación de imagen por IA, se trabajó en la creación de una atmósfera coherente que capturara la esencia del protagonista. 
+                            Utilizando herramientas de IA, se trabajó en una atmósfera coherente que capturara la esencia del protagonista. Cada ilustración acompaña el ritmo pausado de la historia.
                         </div>
                         <div class="page-text">
-                            Cada ilustración fue seleccionada y refinada para asegurar que el lenguaje visual acompañara el ritmo pausado de la historia, centrando la atención en la sensibilidad sensorial de Leo.
+                            Leo escucha el mundo de manera diferente. Donde otros oyen ruido, él percibe el susurro de una hoja al caer.
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-campamento.png" class="full-img">
+                    <img src="../es/proyectos/leo4.png" class="full-img">
                 </div>
             </div>
 
             <div class="paper" id="p4" style="z-index: 5;" onclick="flip(4)">
                 <div class="front">
                     <div class="text-content">
-                        <h4>Narrativa Sensorial</h4>
                         <div class="page-text">
-                            El reto visual consistía en plasmar la hipersensibilidad sonora. Se optó por una paleta de colores que transita entre el agobio cromático de la ciudad y la paz orgánica de la naturaleza.
+                            Muchas veces, si hay mucho ruido, Leo se agobia y se revolvía sin control. Los señores de bata blanca explicaron que su cerebro procesa los sonidos de forma única.
+                        </div>
+                        <div class="page-text">
+                            La IA permite representar ese contraste visual entre el barullo y la calma.
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-familia.png" class="full-img">
+                    <img src="../es/proyectos/leo5.png" class="full-img">
                 </div>
             </div>
 
             <div class="paper" id="p5" style="z-index: 4;" onclick="flip(5)">
                 <div class="front">
                     <div class="text-content">
-                        <h4>El Superpoder de Leo</h4>
                         <div class="page-text">
-                            A través de la tecnología, buscamos empatizar con una percepción extraordinaria. Lo que para el mundo es ruido, para Leo es una partitura de detalles invisibles.
+                            En un campamento conoció a Carlos, un niño que tenía una "oreja especial". Él le enseñó que escuchar distinto no es malo, es solo otra forma de sentir el mundo.
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-amigo.png" class="full-img">
+                    <img src="../es/proyectos/leo6.png" class="full-img">
                 </div>
             </div>
 
@@ -190,12 +190,12 @@
                 <div class="front">
                     <div class="text-content">
                         <div class="page-text">
-                            "Leo comprendió que podía sacar cosas muy buenas de su cualidad especial. Las pérdidas pueden ser ganancias."
+                            Leo comprendió que su cualidad era un superpoder. Podía escuchar notas musicales que otros no llegaban a percibir y aprendió a abrazar de una manera especial.
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-armonia.png" class="full-img">
+                    <img src="../es/proyectos/leo7.png" class="full-img">
                 </div>
             </div>
 
@@ -203,32 +203,36 @@
                 <div class="front">
                     <div class="text-content">
                         <div class="page-text">
-                            Un viaje sobre el autodescubrimiento y la aceptación de nuestra propia manera de escuchar el mundo.
+                            "¡Mamá! He hecho un nuevo amigo. Se llama Carlos y escucha el mundo de manera diferente, igual que yo."
+                        </div>
+                        <div class="page-text">
+                            Leo aprendió que las pérdidas pueden ser ganancias.
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-campamento.png" class="full-img">
+                    <img src="../es/proyectos/leo8.png" class="full-img">
                 </div>
             </div>
 
             <div class="paper" id="p8" style="z-index: 1;" onclick="flip(8)">
                 <div class="front">
-                    <div class="text-content">
-                        <div class="page-text" style="text-align: center;">
-                            Fin de la muestra.
+                    <div class="text-content" style="text-align: center;">
+                        <h4>Fin del viaje</h4>
+                        <div class="page-text">
+                            Un proyecto de Paloma Aguado basado en el texto de Carol Vila Micó.
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo-familia.png" class="full-img">
+                    <img src="../es/proyectos/leo-contraportada.png" class="full-img">
                 </div>
             </div>
 
         </div>
     </div>
 
-    <p class="hint">Haz clic en los bordes para pasar las hojas</p>
+    <p class="hint">Haz clic en el libro para descubrir la historia</p>
 
     <script>
         let book = document.getElementById('book');
