--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -142,17 +142,14 @@
                         <div class="page-text">
                             Este proyecto editorial nace de la necesidad de dar vida a los paisajes internos de "Leo". La narrativa requería una estética que combinara la inocencia con la profundidad del relato.
                         </div>
-                        <div class="quote">
-                            "Para Lucca: te deseo que tu peculiar manera de escuchar e interpretar el mundo te lleve a construir sueños tan grandes como la familia que cuida."
-                        </div>
-                        <div class="credits-box">
+                                                <div class="credits-box">
                             Escrito por Carol Vila Micó<br>
                             Ilustrado por Paloma Aguado
                         </div>
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo3.png" class="full-img">
+                    <img src="../es/proyectos/leo-familia.png" class="full-img">
                 </div>
             </div>
 
@@ -169,7 +166,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo4.png" class="full-img">
+                    <img src="../es/proyectos/leo-armonia.png" class="full-img">
                 </div>
             </div>
 
@@ -182,7 +179,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo5.png" class="full-img">
+                    <img src="../es/proyectos/leo-amigo.png" class="full-img">
                 </div>
             </div>
 
@@ -195,7 +192,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo6.png" class="full-img">
+                    <img src="../es/proyectos/leo-campamento.png" class="full-img">
                 </div>
             </div>
 
