--- a/es/cuento-leo.html
+++ b/es/cuento-leo.html
@@ -205,7 +205,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo7.png" class="full-img">
+                    <img src="../es/proyectos/leo-mama.jpg" class="full-img">
                 </div>
             </div>
 
@@ -218,7 +218,7 @@
                     </div>
                 </div>
                 <div class="back">
-                    <img src="../es/proyectos/leo8.png" class="full-img">
+                    <img src="../es/proyectos/leo-carlos.jpg" class="full-img">
                 </div>
             </div>
 
